test/baseline/func-account_base.test
2012-01-01 Test account_base function
    Assets:Test                       $100.00
    Equity:Opening

test eval "account_base()" -> 1
__ERROR__
While evaluating value expression:
  account_base()
  ^^^^^^^^^^^^^^
Error: Unknown identifier 'account_base'
end test
